--- a/Trabajo DSI/FAQ.html
+++ b/Trabajo DSI/FAQ.html
@@ -81,7 +81,7 @@
         <div class="btn">
             <a href="Inicio sesion.html" class="btn btn-light " role="button">Iniciar sesión</a>
             <a href="Registrarse.html" class="btn btn-light" role="button">Registrarse</a>
-
+            <a href="carrito1.html" class="btn btn-light" role="button">Ver carrito</a> <!---agregue el link añ carrito-->
         </div>
       </div>
       <!-- Collapsible wrapper -->
