--- a/Trabajo DSI/Anillospagina.html
+++ b/Trabajo DSI/Anillospagina.html
@@ -84,7 +84,9 @@
                 <div class="btn">
                     <a href="Inicio sesion.html" class="btn btn-light " role="button">Iniciar sesión</a>
                     <a href="Registrarse.html" class="btn btn-light" role="button">Registrarse</a>
-                    <a href="carrito1.html" class="btn btn-light" role="button">Ver carrito</a> <!---agregue el link añ carrito-->
+                    <a title="carrito" href="carrito1.html"><img src="imagenes/carrito.png" alt="carro" width="30px" /></a><!---agregue el link añ carrito-->
+
+
                 </div>
             </div>
             <!-- Collapsible wrapper -->
