--- a/Trabajo DSI/Aros.html
+++ b/Trabajo DSI/Aros.html
@@ -61,7 +61,7 @@
               Productos
             </a>
             <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-              <li><a class="dropdown-item" href="Anillos.html">Anillos</a></li>
+              <li><a class="dropdown-item" href="Anillospagina.html">Anillos</a></li>
               <li><a class="dropdown-item" href="Aros.html">Aros</a></li>
               <li><a class="dropdown-item" href="Collares.html">Collares</a></li>
               <li><a class="dropdown-item" href="Joyeros.html">Joyeros</a></li>
@@ -79,8 +79,9 @@
         <!-- Botones de la derecha -->
 
         <div class="btn">
-            <a href="Inicio sesion.html" class= "btn btn-light " role="button">Iniciar sesión</a>
+            <a href="Inicio sesion.html" class="btn btn-light " role="button">Iniciar sesión</a>
             <a href="Registrarse.html" class="btn btn-light" role="button">Registrarse</a>
+            <a title="carrito" href="carrito1.html"><img src="imagenes/carrito.png" alt="carro" width="30px" /></a><!---agregue el link añ carrito-->
         </div>
       </div>
       <!-- Collapsible wrapper -->
