--- a/Trabajo DSI/carrito1.html
+++ b/Trabajo DSI/carrito1.html
@@ -72,11 +72,6 @@
 
                 </ul>
 
-
-
-
-
-
                 <!-- Botones de la derecha -->
 
                 <div class="btn">
@@ -113,7 +108,7 @@
                                         <input type="text" class="form-control" id="correo" placeholder="Ingresa tu correo" name="cc_to">
                                     </div>
                                 </div>
-
+<br>
                                 <div id="carrito" class="form-group table-responsive">
                                     <table class="table" id="lista-compra">
                                         <thead>
@@ -137,12 +132,23 @@
                                                 <td></td>
                                                 <td></td>
                                                 <td>
+                                                    <input type="image" src="imagenes/eliminar.png" style="border: single;" width="20px" />
 
-</tr>
+                                            </tr>
                                             <tr>
                                                 <th scope="row">2</th>
+                                                <td></td>
+                                                <td></td>
+                                                <td></td>
+                                                <td></td>
+                                                <td></td>
+                                                <td></td>
+                                                <td>
+                                                <input type="image" src="imagenes/eliminar.png" style="border: single;" width="20px" />
+
                                             </tr>
                                         </tbody>
+                                        <br>
                                         <tr>
                                             <th colspan="4" scope="col" class="text-right">SUB TOTAL :</th>
                                             <th scope="col">
@@ -166,7 +172,7 @@
 
                                 <div class="row justify-content-between">
                                     <div class="col-md-4 mb-2">
-                                        <a href="#" class="btn btn-dark">Seguir comprando</a>
+                                        <a href="FAQ.html" class="btn btn-dark">Seguir comprando</a>
                                     </div>
                                     <div class="col-xs-12 col-md-4">
                                         <button href="#" class="btn btn-dark" id="procesar-compra">Realizar compra</button>
