--- a/Trabajo DSI/Joyeros.html
+++ b/Trabajo DSI/Joyeros.html
@@ -79,8 +79,9 @@
         <!-- Botones de la derecha -->
 
         <div class="btn">
-            <a href="Inicio sesion.html" class= "btn btn-light " role="button">Iniciar sesión</a>
+            <a href="Inicio sesion.html" class="btn btn-light " role="button">Iniciar sesión</a>
             <a href="Registrarse.html" class="btn btn-light" role="button">Registrarse</a>
+            <a title="carrito" href="carrito1.html"><img src="imagenes/carrito.png" alt="carro" width="30px" /></a><!---agregue el link añ carrito-->
         </div>
       </div>
       <!-- Collapsible wrapper -->
