reparacion boton eliminar
se modifico el boton eliminar del carrito.

--- a/Trabajo DSI/carrito1.html
+++ b/Trabajo DSI/carrito1.html
@@ -132,9 +132,10 @@
                                                 <td></td>
                                                 <td></td>
                                                 <td>
-                                                    <input type="image" src="imagenes/eliminar.png" style="border: single;" width="20px" />
-
-                                            </tr>
+                                                    <div class="btn">
+                                                        <a title="carrito""><img src="imagenes/eliminar.png" alt="carro" width="20px" /></a>
+                                                    <div/>
+</tr>
                                             <tr>
                                                 <th scope="row">2</th>
                                                 <td></td>
@@ -144,9 +145,10 @@
                                                 <td></td>
                                                 <td></td>
                                                 <td>
-                                                <input type="image" src="imagenes/eliminar.png" style="border: single;" width="20px" />
-
-                                            </tr>
+                                                    <div class="btn">
+                                                        <a title="carrito" "><img src="imagenes/eliminar.png" alt="carro" width="20px" /></a>
+                                                        <div />
+</tr>
                                         </tbody>
                                         <br>
                                         <tr>
